# xpct

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: coverage.yaml  test.yaml
examples/: chaining.txt  collections.txt  diff.txt  equality.txt  example_1.txt  example_2.txt  example_3.txt  fields.txt
src/: assertion.rs  color.rs  context.rs  error.rs  format.rs  indent.rs  lib.rs  location.rs  matcher.rs  result.rs  sealed.rs  template.rs
src/core/: adapter.rs  assertion.rs  context.rs  matcher.rs  mod.rs  result.rs  style.rs  template.rs  wrap.rs
src/core/format/: assertion.rs  base.rs  color.rs  formatter.rs  formatter_color.rs  indent.rs  mod.rs  strings.rs  style.rs
src/docs/: cargo_features.rs  list_of_matchers.rs  matcher_list.rs  mod.rs  tutorial.rs  writing_formatters.rs  writing_matchers.rs
src/fmt/: mod.rs
src/format/: all.rs  any.rs  assertion.rs  base.rs  boolean.rs  casefold.rs  contain.rs  default.rs  diff.rs  diffing.rs  each.rs  elements.rs  equal.rs  every.rs  fields.rs  file.rs  float.rs  formatter.rs  formatter_color.rs  indent.rs  json.rs  len.rs  map.rs  mod.rs  none.rs  not.rs  option.rs  ord.rs  pattern.rs  regex.rs  result.rs  style.rs  substr.rs  time.rs  why.rs  zero.rs
src/matchers/: all.rs  any.rs  boolean.rs  casefold.rs  chain.rs  combinator.rs  contain.rs  default.rs  diff.rs  diff_impl.rs  each.rs  elements.rs  equal.rs  every.rs  fields.rs  file.rs  files.rs  float.rs  format.rs  json.rs  len.rs  map.rs  mod.rs  none.rs  not.rs  option.rs  or.rs  ord.rs  pattern.rs  regex.rs  result.rs  substr.rs  time.rs  values.rs  why.rs  zero.rs
src/matchers/collections/: contain.rs  elements.rs  every.rs  len.rs  mod.rs
src/matchers/combinators/: chain.rs  combinator.rs  mod.rs
src/matchers/numbers/: float.rs  mod.rs  zero.rs
src/matchers/strings/: casefold.rs  json.rs  mod.rs  regex.rs  substr.rs
