[package]
name = "xpct"
version = "0.1.0"
description = "An extensible assertions library"
edition = "2021"
authors = ["Wren Powell <wrentpowell@gmail.com>"]
homepage = "https://github.com/lostatc/xpct"
repository = "https://github.com/lostatc/xpct"
documentation = "https://docs.rs/xpct"
readme = "README.md"
license = "MIT"
keywords = ["testing", "assertions"]
categories = ["development-tools", "development-tools::testing"]

  # We use an attribute when building on docs.rs so we can make use of unstable
  # rustdoc features.
  [package.metadata.docs.rs]
  all-features = true
  rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0"
bitflags = "1.3"
atty = { version = "0.2", optional = true }
termcolor = { version = "1.1", optional = true }

[features]
default = ["fmt", "color"]
fmt = []
color = ["dep:atty", "dep:termcolor"]
