[package]
name = "xpct"
version = "0.1.0"
description = "An extensible assertions library"
edition = "2021"
authors = ["Wren Powell <wrenp@duck.com>"]
homepage = "https://github.com/lostatc/xpct"
repository = "https://github.com/lostatc/xpct"
documentation = "https://docs.rs/xpct"
readme = "README.md"
license = "MIT"
keywords = ["testing", "assertions"]
categories = ["development-tools", "development-tools::testing"]

  # We use an attribute when building on docs.rs so we can make use of unstable
  # rustdoc features.
  [package.metadata.docs.rs]
  all-features = true
  rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0"
bitflags = "1.3"
colored = { version = "2.0", optional = true }
atty = { version = "0.2", optional = true }
regex = { version = "1.7.0", optional = true }
serde_json = { version = "1.0.91", optional = true }

[dev-dependencies]
doc-comment = "0.3.3"

[features]
default = ["fmt", "color"]
regex = ["dep:regex"]
json = ["dep:serde_json"]
fmt = []
color = ["dep:colored", "dep:atty"]
